src/test/ui/issues/issue-15919-32.stderr
error: values of the type `[usize; 4294967295]` are too big for the current architecture
  --> $DIR/issue-15919-32.rs:9:9
   |
LL |     let x = [0usize; 0xffff_ffff];
   |         ^

error: aborting due to previous error

